--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,7 @@
   align-self: center;
   align-content: center;
   justify-content: center;
-  min-width: 95%;
-  max-width: 95%;
+  min-width: 100%;
   min-height: 100%;
   flex:1;
   display: flex;
@@ -15,8 +14,9 @@
 .table{
   justify-content: center;
   margin-top: 1em;
+  max-width: 95%;
   flex:1;
-  border: 1px solid black;
+  border: 1px solid grey;
   border-radius: 20px;
   align-self: center;
   align-items: center;
@@ -24,6 +24,8 @@
 }
 
 .display{
+  text-align: right;
+  padding-right: 2em;
   margin-top: 2%;
   margin-bottom: 2%;
   min-height: 20em;
@@ -32,12 +34,14 @@
   border-style:solid;
 }
 .header-row{
+  justify-content: center;
   flex:1;
   display: flex;
   flex-direction: row;
 }
 
 .row{
+  justify-content: center;
   flex:1;
   display: flex;
   flex-direction: row;
